Match details page and more routing
